Fixed another typo in the requirements.txt directory name for Pylint.

--- a/.github/workflows/tests-and-checks.yml
+++ b/.github/workflows/tests-and-checks.yml
@@ -53,8 +53,8 @@ jobs:
       - name: Run Pylint GitHub Action
         uses: ReasonSoftware/action-pylint@v2.0.4
         with:
-          requirements_file: /src/requirements.txt
-          filepaths: "app/*.py"
+          requirements_file: src/requirements.txt
+          filepaths: "src/*.py"
           options: "-d C0114,C0115,C0116"
 
   unittest:
