--- a/.github/workflows/tests-and-checks.yml
+++ b/.github/workflows/tests-and-checks.yml
@@ -51,10 +51,14 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Install dependencies
+        uses: BSFishy/pip-action@v1
+        with:
+          requirements: src/requirements.txt
+
       - name: Run Pylint GitHub Action
         uses: ReasonSoftware/action-pylint@v2.0.4
         with:
-          requirements_file: src/requirements.txt
           filepaths: "src/*.py"
           options: "-d C0114,C0115,C0116"
 
