--- a/.github/workflows/tests-and-checks.yml
+++ b/.github/workflows/tests-and-checks.yml
@@ -43,24 +43,41 @@ jobs:
         with:
           tool_name: blackfmt 
 
-  python-pylint:
-    name: Run Pylint Github Action
+ # python-pylint:
+    #name: Run Pylint Github Action
+    #runs-on: ubuntu-latest
+    #continue-on-error: true
+    #steps:
+      #- name: Checkout repo
+        #uses: actions/checkout@v4
+
+      #- name: Install dependencies
+        #uses: BSFishy/pip-action@v1
+        #with:
+          #requirements: src/requirements.txt
+
+      #- name: Run Pylint GitHub Action
+        #uses: ReasonSoftware/action-pylint@v2.0.4
+        #with:
+          #filepaths: "src/*.py"
+          #options: "-d C0114,C0115,C0116" 
+
+  python-lint:
+    name: Python Lint
     runs-on: ubuntu-latest
-    continue-on-error: true
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        uses: BSFishy/pip-action@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
-          requirements: src/requirements.txt
-
-      - name: Run Pylint GitHub Action
-        uses: ReasonSoftware/action-pylint@v2.0.4
+          python-version: "3.9"
+      - name: Run flake8
+        uses: julianwachholz/flake8-action@v2
         with:
-          filepaths: "src/*.py"
-          options: "-d C0114,C0115,C0116"
+          checkName: "Python Lint"
+          path: src
+          plugins: flake8-spellcheck
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   unittest:
     name: Run Python unit tests
