--- a/.github/workflows/tests-and-checks.yml
+++ b/.github/workflows/tests-and-checks.yml
@@ -43,25 +43,6 @@ jobs:
         with:
           tool_name: blackfmt 
 
- # python-pylint:
-    #name: Run Pylint Github Action
-    #runs-on: ubuntu-latest
-    #continue-on-error: true
-    #steps:
-      #- name: Checkout repo
-        #uses: actions/checkout@v4
-
-      #- name: Install dependencies
-        #uses: BSFishy/pip-action@v1
-        #with:
-          #requirements: src/requirements.txt
-
-      #- name: Run Pylint GitHub Action
-        #uses: ReasonSoftware/action-pylint@v2.0.4
-        #with:
-          #filepaths: "src/*.py"
-          #options: "-d C0114,C0115,C0116" 
-
   python-lint:
     name: Python Lint
     runs-on: ubuntu-latest
@@ -95,3 +76,19 @@ jobs:
         uses: BSFishy/pip-action@v1
         with:
           requirements: src/requirements.txt
+
+  terraform-fmt:
+    name: Check Terraform file are formatted correctly
+    runs-on: ubuntu-latest
+    needs: [unittest]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: terraform fmt
+        uses: dflook/terraform-fmt@v1.46.0
+        with:
+          path: terraform
+
+
+
