--- a/.github/workflows/tests-and-checks.yml
+++ b/.github/workflows/tests-and-checks.yml
@@ -90,5 +90,23 @@ jobs:
         with:
           path: terraform
 
+  terraform-validate:
+    name: Validate Terraform module
+    runs-on: ubuntu-latest
+    needs: [terraform-fmt]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: terraform validate
+        uses: dflook/terraform-validate@v1.9.3
+        id: validate
+        with:
+          path: terraform
+
+      - name: Validate failed
+        if: ${{ failure() && steps.validate.outputs.failure-reason == 'validate-failed' }}
+        run: echo "terraform validate failed"
+
 
 
