--- a/.github/workflows/PR-checks.yml
+++ b/.github/workflows/PR-checks.yml
@@ -2,9 +2,7 @@ name: PR Checks
 
 on:
   pull_request:
-    branches:
-      - main
-  workflow_call:
+    branches: [main]
   
 jobs:
   tests-and-checks:
