--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,6 @@ override.tf.json
 
 # Ignore transient lock info files created by terraform apply
 .terraform.tfstate.lock.info
-.terraform.lock.hcl
 
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
@@ -103,7 +102,7 @@ terraform.rc
 
 .pre-commit-config.yaml
 
-.tar
-.zip
-.tgz
-.patch
+*.tar
+*.zip
+*.tgz
+*.patch
