Updating ignore-branches - adding quotes.

--- a/.github/workflows/tests-and-checks.yml
+++ b/.github/workflows/tests-and-checks.yml
@@ -3,7 +3,7 @@ name: Syntax check and unit tests on push
 on:
   push:
     branches-ignore:
-      - main
+      - 'main'
   workflow_call:
 
 jobs:
