--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -14,6 +14,7 @@ jobs:
   set-vars:
     name: Set vars
     runs-on: ubuntu-latest
+    needs: [pr-checks]
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
