Set workflow to inherit secrets.

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,6 +10,7 @@ jobs:
   pr-checks:
     name: PR Checks
     uses: ./.github/workflows/PR-checks.yml
+    secrets: inherit
 
   set-vars:
     name: Set vars
