--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -41,12 +41,12 @@ jobs:
         with:
           context: /src
           push: false
-          tags: ${{ vars.ECR_REPO }}/budget-app:${{ GITHUB_SHA }}
+          tags: ${{ vars.ECR_REPO }}/budget-app:${{ GITHUB.SHA }}
 
       - name: Scan with Trivy
         uses: aquasecurity/trivy-action@0.28.0
         with: 
-          image-ref: ${{ vars.ECR_REPO }}/budget-app:${{ GITHUB_SHA }}
+          image-ref: ${{ vars.ECR_REPO }}/budget-app:${{ GITHUB.SHA }}
           format: "table"
           ignore-unfixed: true
           vuln-type: "os,library"
