--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -40,6 +40,17 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Set AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4.0.2
+        with:
+          aws-access-key-id: ${{ vars.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ vars.AWS_REGION }}
+
+      - name: Log in to AWS
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2.0.1
+
       - name: Build image
         uses: docker/build-push-action@v6
         with:
@@ -54,25 +65,6 @@ jobs:
           format: "table"
           ignore-unfixed: true
           vuln-type: "os,library"
-
-  push: 
-    name: Push container image to ECR
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-        
-      - name: Set AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4.0.2
-        with:
-          aws-access-key-id: ${{ vars.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-north-1
-
-      - name: Log in to AWS
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2.0.1
 
       - name: Push the image to ECR
         run: docker push ${{ vars.ECR_REPO }}/budget-app:${{ GITHUB.SHA }}
