--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,7 +10,7 @@ permissions:
   id-token: write
   contents: read 
 
-#jobs:
+jobs:
   #pr-checks:
     #name: PR Checks
     #uses: ./.github/workflows/PR-checks.yml
