--- a/.github/workflows/PR-checks.yml
+++ b/.github/workflows/PR-checks.yml
@@ -7,19 +7,19 @@ on:
   
 jobs:
   tests-and-checks:
-    name: Tests and Checks
-    uses: ./.github/workflows/tests-and-checks.yml
+#    name: Tests and Checks
+    #uses: ./.github/workflows/tests-and-checks.yml
 
-  snyk:
-    name: Run Snyk
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run Snyk
-        uses: snyk/actions/python@master
-        continue-on-error: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  #snyk:
+    #name: Run Snyk
+    #runs-on: ubuntu-latest
+    #steps:
+      #- name: Run Snyk
+        #uses: snyk/actions/python@master
+        #continue-on-error: true
+        #env:
+          #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          #SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
   sonar:
     name: Run SonarCloud
