--- a/.github/workflows/PR-checks.yml
+++ b/.github/workflows/PR-checks.yml
@@ -6,7 +6,7 @@ on:
   workflow_call:
   
 jobs:
-  tests-and-checks:
+  #tests-and-checks:
 #    name: Tests and Checks
     #uses: ./.github/workflows/tests-and-checks.yml
 
