--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -37,14 +37,6 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2.0.1
 
-      - name: Set vars
-        run: |
-          if [[ $GITHUB_REF == 'refs/head/release' ]]; then
-            echo "release" > .workspace
-          else
-            echo "staging" > .workspace
-          fi
-
       - name: Build and push Docker image
         id: build-image
         uses: docker/build-push-action@v6
@@ -65,11 +57,19 @@ jobs:
         run: docker push ${{ vars.ECR_REPO }}:${{ GITHUB.SHA }}
 
   deploy:
-    name: Build and Push Image
+    name: Deploy
     runs-on: ubuntu-latest
     needs: [build-and-push]
     steps:
-      - name: Terraform Apply
+      - name: Set vars
+        run: |
+          if [[ $GITHUB_REF == 'refs/head/release' ]]; then
+            echo "release" > .workspace
+          else
+            echo "staging" > .workspace
+          fi
+
+      - name: Terraform apply
         env:
           AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
