--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -61,6 +61,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-and-push]
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
       - name: Set vars
         run: |
           if [[ $GITHUB_REF == 'refs/head/release' ]]; then
