--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -78,7 +78,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_db-password: ${{ secrets.TF_VAR_DB_PASSWORD }}
         run: |
-          export TF_VAR_ecr-app-image=${{ vars.ECR_REPO }}:${{ GITHUB.SHA }}
+          export TF_VAR_ecr_app_image=${{ vars.ECR_REPO }}:${{ GITHUB.SHA }}
           workspace=$(cat .workspace)
           cd terraform/
           docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=deploy/ init
