--- a/terraform/docker-compose-terraform-setup.yml
+++ b/terraform/docker-compose-terraform-setup.yml
@@ -12,4 +12,5 @@ services:
             - AWS_DEFAULT_REGION=eu-north-1
             - TF_WORKSPACE=${TF_WORKSPACE}
             - TF_VAR_db_password=${TF_VAR_db_password}
+            - TF_VAR_secret_key=${APP_SECRET_KEY}
             - TF_VAR_ecr_app_image=${TF_VAR_ecr_app_image}
