--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -78,8 +78,8 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           TF_VAR_db_password: ${{ secrets.TF_VAR_DB_PASSWORD }}
           APP_SECRET_KEY: ${{ secrets.APP_SECRET_KEY }}
+          TF_VAR_ecr_app_image: "${{ vars.ECR_REPO }}:${{ GITHUB.SHA }}"
         run: |
-          export TF_VAR_ecr_app_image=${{ vars.ECR_REPO }}:${{ GITHUB.SHA }}
           workspace=$(cat .workspace)
           cd terraform/
           docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=deploy/ init
