Add conditional TF setup run

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -33,6 +33,40 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.AWS_REGION }}
 
+      - name: Set vars
+        run: |
+          if [[ $GITHUB_REF == 'refs/head/release' ]]; then
+            echo "release" > .workspace
+          else
+            echo "config" > .workspace
+          fi
+
+      - name: Read TF workspace contents
+        id: determine_workspace
+        uses: guibranco/github-file-reader-action-v2@latest
+        with:
+          path: ".workspace"
+
+      - name: Check for TF setup change
+        uses: dorny/paths-filter@v3
+        id: setup_changed
+        with:
+          filters: |
+            setup:
+              - 'terraform/setup/**'
+
+      - name: Terraform apply setup
+        if: steps.setup_changed.outputs.setup == 'true'
+        env:
+          AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_WS: "${{ steps.determine_workspace.outputs.contents }}"
+        working-directory: "terraform"
+        run: |
+          docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=setup/ init
+          docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=setup/ workspace select -or-create $TF_WS
+          docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=setup/ plan
+
       - name: Log in to AWS
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2.0.1
