--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -63,9 +63,10 @@ jobs:
           TF_WS: "${{ steps.determine_workspace.outputs.contents }}"
         working-directory: "terraform"
         run: |
-          docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=setup/ init
-          docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=setup/ workspace select -or-create $TF_WS
-          docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=setup/ apply -auto-approve
+          TF_CMD="docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=setup/"
+          $TF_CMD init
+          $TF_CMD workspace select -or-create $TF_WS
+          $TF_CMD apply -auto-approve
 
       - name: Log in to AWS
         id: login-ecr
@@ -106,6 +107,12 @@ jobs:
             echo "staging" > .workspace
           fi
 
+      - name: Read TF workspace contents
+        id: determine_workspace
+        uses: guibranco/github-file-reader-action-v2@latest
+        with:
+          path: ".workspace"
+
       - name: Terraform apply
         env:
           AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
@@ -113,9 +120,10 @@ jobs:
           TF_VAR_db_password: ${{ secrets.TF_VAR_DB_PASSWORD }}
           APP_SECRET_KEY: ${{ secrets.APP_SECRET_KEY }}
           TF_VAR_ecr_app_image: "${{ vars.ECR_REPO }}:${{ GITHUB.SHA }}"
+          TF_WS: "${{ steps.determine_workspace.outputs.contents }}"
+        working-directory: "terraform"
         run: |
-          workspace=$(cat .workspace)
-          cd terraform/
-          docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=deploy/ init
-          docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=deploy/ workspace select -or-create $workspace
-          docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=deploy/ apply -auto-approve
+          TF_CMD="docker compose -f docker-compose-terraform-setup.yml run --rm terraform -chdir=deploy/"
+          $TF_CMD init
+          $TF_CMD workspace select -or-create $TF_WS
+          $TF_CMD apply -auto-approve
