Debug message for workspace compute step

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -101,6 +101,7 @@ jobs:
 
       - name: Set vars
         run: |
+          echo $GITHUB_REF
           if [[ $GITHUB_REF == 'refs/head/release' ]]; then
             echo "release" > .workspace
           else
